--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
+#########################
+# macOS
+#########################
 .DS_Store
+
+#########################
+# VSCode
+#########################
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+#########################
+# Unity
+#########################
 
 /[Ll]ibrary/
 /[Tt]emp/
